--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">Soccer News</string>
     <string name="title_news">News</string>
     <string name="title_favorite">Favorites</string>
-    <string name="card_new_reader">Read more...</string>
+    <string name="card_new_reader">Read more…</string>
     <string name="card_new_img">News Image</string>
     <string name="card_new_icon">Favorite</string>
     <string name="share">Share</string>
+    <string name="es">Women\'s football</string>
+    <string name="sharing">Share using</string>
 </resources>
